# Space-Aliens

./: .gitignore  Bullet.cpp  Bullet.h  Bullet.qml  CMakeLists.txt  Controller.cpp  Controller.h  Enemy.cpp  Enemy.h  Enemy.qml  README.md  SoundManager.cpp  SoundManager.h  main.cpp  main.qml  readme.txt
Assets/: Assets.qrc
Com/: Trailer.mlt
